--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://cwilkins507.github.io/my-portfolio",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp dist/index.html dist/404.html",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
