--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "type": "module",
   "homepage": "https://cwilkins507.github.io/my-portfolio",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build && cp dist/index.html dist/404.html",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.4.2",
+    "@astrojs/sitemap": "^3.7.0",
+    "@astrojs/tailwind": "^6.0.2",
     "@tailwindcss/typography": "^0.5.19",
+    "astro": "^5.16.11",
     "buffer": "^6.0.3",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.544.0",
@@ -37,7 +40,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.19",
     "vite": "^7.1.7"
   }
 }
