--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://cwilkins507.github.io/my-portfolio",
+  "homepage": "https://collinwilkins.com",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
