--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@tailwindcss/typography": "^0.5.19",
     "astro": "^5.16.11",
     "buffer": "^6.0.3",
+    "framer-motion": "^11.15.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.54.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.30.1",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
